@@ -1,3 +1,15 @@
+2012-12-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/SDCCralloc.hpp:
+	  Send error message about invalid root to crr instead of cout.
+
+2012-12-19 Borut Razem <borut.razem AT gmail.com>
+
+	* src/SDCCmain.c, src/SDCCglobl.h, support/cpp/sdcpp.opt,
+	  support/cpp/libcpp/init.c, support/cpp/sdcpp-opts.c
+	  fixed bug 3572584 - "Trigraphs don't work", 2nd try:
+	  trigraphs are enabled by default in sdcpp
+
 2012-12-16 Borut Razem <borut.razem AT gmail.com>
 
 	* src/SDCCglobl.h, src/SDCCmain.c:
